Fix download app issues, fix system conf nat.
Fix download app when app is not available will cause
an error page instead of JSON response.

Fix system configuration will not check/uncheck "allow_nat"
configuration.

Removed package dependencies, use spring-boot-starts pom
instead.

Create new startup script.